# ds-survey-take-home-test

./: .gitignore  CHALLENGE.md  FORMULATION.md  HOW_TO_RUN.md  Instructions.md  README.md  allocator.ipynb  bundle_engine.py  config.py  data_loader.py  demographic.py  main.py  monte_carlo_validation.py  optimizer.py  pyproject.toml  reporting.py  result_report.md  validation.py
data/: fake_category_data_enriched.csv
experiments/: demographic_impact_analysis.py  experiment.py  monte_carlo_experiment.py  run_simulation.py
results/: bundle_plan.csv  bundle_plan_winter.csv  bundle_summary.csv  bundle_summary_winter.csv  monte_carlo_demographic_aware.csv  monte_carlo_priority_greedy.csv  monte_carlo_random.csv
src/: allocation_policies.py  bounds_calculation.py  compare_datasets.py  data_loader.py  simulation.py
