[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ds-survey-take-home-test"
version = "1.0"
description = ""
authors = []
license = ""
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.3.5"
pandas = "^2.3.3"
scipy = "^1.16.3"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
pulp = "^3.3.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"


[tool.autopep8]
max_line_length = 100


