[project]
name = "ds-survey-take-home-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Vivek Katial",email = "vivekkatial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "plotly>=5.18.0,<6.0.0",
    "pulp (>=3.3.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
